@@ -119,9 +119,9 @@ enum mosquitto_client_state {
 
 enum mosquitto__protocol {
 	mosq_p_invalid = 0,
-	mosq_p_mqtt31 = 1,
-	mosq_p_mqtt311 = 2,
-	mosq_p_mqtts = 3,
+	mosq_p_mqtts = 1,
+	mosq_p_mqtt31 = 3,
+	mosq_p_mqtt311 = 4,
 	mosq_p_mqtt5 = 5,
 };
 
